--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8" />
         <title>Yew App</title>
-        <link rel="stylesheet" href="/input-e4c6a34f3740e60.css" integrity="sha384&#x2D;MNPGCNMIjaypAWMAy&#x2F;xvVoNmWY8ICXERZMR8OKDGeFHeIKovSoJI0zMpxtI8AUrE"/>
+        <link rel="stylesheet" href="/dijkstras_visualization/input-e4c6a34f3740e60.css" integrity="sha384&#x2D;MNPGCNMIjaypAWMAy&#x2F;xvVoNmWY8ICXERZMR8OKDGeFHeIKovSoJI0zMpxtI8AUrE"/>
     
-<link rel="modulepreload" href="/dijkstras_rust-443c5e27dc8fcba3.js" crossorigin=anonymous integrity="sha384-ASGklbqPmPlz+SCQhHvW8rzvAcWP/+S2JazK0p8+iAkoP7FqzHfCqeK+0rsMIE2O">
-<link rel="preload" href="/dijkstras_rust-443c5e27dc8fcba3_bg.wasm" crossorigin=anonymous integrity="sha384-lKCsqxi97tjEFDcDITyTfAB00xINPjM06qFZummsKn81FdIPxSDMgd4kPyPFzHCF" as="fetch" type="application/wasm"></head>
+<link rel="modulepreload" href="/dijkstras_visualization/dijkstras_rust-443c5e27dc8fcba3.js" crossorigin=anonymous integrity="sha384-ASGklbqPmPlz+SCQhHvW8rzvAcWP/+S2JazK0p8+iAkoP7FqzHfCqeK+0rsMIE2O">
+<link rel="preload" href="/dijkstras_visualization/dijkstras_rust-443c5e27dc8fcba3_bg.wasm" crossorigin=anonymous integrity="sha384-lKCsqxi97tjEFDcDITyTfAB00xINPjM06qFZummsKn81FdIPxSDMgd4kPyPFzHCF" as="fetch" type="application/wasm"></head>
     <body>
-<script type="module" nonce="kaLdwDHXE3+RAMPuksXqHQ==">
-import init, * as bindings from '/dijkstras_rust-443c5e27dc8fcba3.js';
-const wasm = await init('/dijkstras_rust-443c5e27dc8fcba3_bg.wasm');
+<script type="module" nonce="Bm8K9rGJlY52PlDgadvXJA==">
+import init, * as bindings from '/dijkstras_visualization/dijkstras_rust-443c5e27dc8fcba3.js';
+const wasm = await init('/dijkstras_visualization/dijkstras_rust-443c5e27dc8fcba3_bg.wasm');
 
 
 window.wasmBindings = bindings;
