--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="utf-8" />
         <title>Yew App</title>
-        <link rel="stylesheet" href="/dijkstras_visualization/input-e4c6a34f3740e60.css" integrity="sha384&#x2D;MNPGCNMIjaypAWMAy&#x2F;xvVoNmWY8ICXERZMR8OKDGeFHeIKovSoJI0zMpxtI8AUrE"/>
+        <link rel="stylesheet" href="/dijkstras_visualization/input-4654d3105228d0a.css" integrity="sha384&#x2D;&#x2F;5N&#x2B;uwKUHvNSKsOqCg&#x2B;nQoXYds2q705JyTUpMVNU6xxjMnS7KMXAI7&#x2B;Fwop5uozy"/>
     
-<link rel="modulepreload" href="/dijkstras_visualization/dijkstras_rust-491cacd5c99aa7f4.js" crossorigin=anonymous integrity="sha384-FXalEp4QnMMmtaTh/qX6/ibk+wJvWv/k980dyhvNakv2ZTPqmtXfS6/NCi44JuCm">
-<link rel="preload" href="/dijkstras_visualization/dijkstras_rust-491cacd5c99aa7f4_bg.wasm" crossorigin=anonymous integrity="sha384-atCG+5RRSPL9gCifMlH4/jOsuXYfI0OtTsNE6DX5uMOrIAX0YR7uBPSYx5yY8XHE" as="fetch" type="application/wasm"></head>
+<link rel="modulepreload" href="/dijkstras_visualization/dijkstras_rust-eabe905d4f8cdf3.js" crossorigin=anonymous integrity="sha384-FXalEp4QnMMmtaTh/qX6/ibk+wJvWv/k980dyhvNakv2ZTPqmtXfS6/NCi44JuCm">
+<link rel="preload" href="/dijkstras_visualization/dijkstras_rust-eabe905d4f8cdf3_bg.wasm" crossorigin=anonymous integrity="sha384-yprMjUwYYMvpstBFkn2lNSba0/8w+qyjTy/CYrxA3hnE2OWyQ+QeXrTMCsYcB1Er" as="fetch" type="application/wasm"></head>
     <body>
-<script type="module" nonce="oCTgXr1NiS+aqwcPrdjP6A==">
-import init, * as bindings from '/dijkstras_visualization/dijkstras_rust-491cacd5c99aa7f4.js';
-const wasm = await init('/dijkstras_visualization/dijkstras_rust-491cacd5c99aa7f4_bg.wasm');
+<script type="module" nonce="6pTVoCozQZP+5J+mbIIiYw==">
+import init, * as bindings from '/dijkstras_visualization/dijkstras_rust-eabe905d4f8cdf3.js';
+const wasm = await init('/dijkstras_visualization/dijkstras_rust-eabe905d4f8cdf3_bg.wasm');
 
 
 window.wasmBindings = bindings;
